--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/core": "^4.2.11",
+    "@mantine/dates": "^4.2.11",
+    "@mantine/form": "^4.2.11",
+    "@mantine/modals": "^4.2.11",
+    "@tanstack/react-table": "^8.1.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "c3": "^0.7.13",
     "d3": "^5.15.0",
+    "date-fns": "^2.28.0",
     "firebase": "^6.6.2",
-    "firebase-admin": "^8.9.2",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -22,6 +27,7 @@
     "redux": "^4.0.5",
     "redux-firestore": "^0.8.0",
     "redux-thunk": "^2.3.0",
+    "tabler-icons-react": "^1.52.0",
     "underscore": "^1.9.2"
   },
   "scripts": {
