--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@mantine/core": "^4.2.11",
     "@mantine/dates": "^4.2.11",
     "@mantine/form": "^4.2.11",
+    "@mantine/hooks": "^4.2.12",
     "@mantine/modals": "^4.2.11",
     "@tanstack/react-table": "^8.1.3",
     "axios": "^0.19.2",
