--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "c3": "^0.7.13",
     "d3": "^5.15.0",
     "date-fns": "^2.28.0",
+    "dayjs": "^1.11.3",
     "firebase": "^6.6.2",
     "react": "^16.12.0",
     "react-c3js": "^0.1.20",
