--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@david.kucsai/react-pdf-table": "^0.4.1",
     "@mantine/core": "^4.2.11",
     "@mantine/dates": "^4.2.11",
     "@mantine/form": "^4.2.11",
     "@mantine/hooks": "^4.2.12",
     "@mantine/modals": "^4.2.11",
+    "@react-pdf/renderer": "^2.3.0",
     "@tanstack/react-table": "^8.1.3",
     "axios": "^0.19.2",
     "c3": "^0.7.13",
