--- a/package.json
+++ b/package.json
@@ -12,21 +12,29 @@
     "@react-pdf/renderer": "^2.3.0",
     "@tanstack/react-table": "^8.1.3",
     "axios": "^0.19.2",
+    "body-parser": "^1.20.0",
     "c3": "^0.7.13",
     "d3": "^5.15.0",
     "date-fns": "^2.28.0",
     "dayjs": "^1.11.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.18.1",
     "firebase": "^6.6.2",
+    "i18next": "^21.8.13",
+    "nodemon": "^2.0.19",
     "react": "^16.12.0",
     "react-c3js": "^0.1.20",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.18.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
+    "simple-oauth2": "^4.3.0",
     "tabler-icons-react": "^1.52.0",
     "underscore": "^1.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "nodemon server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -45,5 +53,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8888"
 }
