--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "mdv-pco-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@david.kucsai/react-pdf-table": "^0.4.1",
-    "@mantine/core": "^4.2.11",
-    "@mantine/dates": "^4.2.11",
-    "@mantine/form": "^4.2.11",
-    "@mantine/hooks": "^4.2.12",
-    "@mantine/modals": "^4.2.11",
+    "@mantine/core": "^5.7.0",
+    "@mantine/dates": "^5.7.0",
+    "@mantine/form": "^5.7.0",
+    "@mantine/hooks": "^5.7.0",
+    "@mantine/modals": "^5.7.0",
     "@react-pdf/renderer": "^2.3.0",
     "@tanstack/react-table": "^8.1.3",
     "axios": "^0.19.2",
@@ -21,6 +21,7 @@
     "express": "^4.18.1",
     "firebase": "^6.6.2",
     "i18next": "^21.8.13",
+    "netlify-cli": "^10.11.0",
     "nodemon": "^2.0.19",
     "react": "^16.12.0",
     "react-c3js": "^0.1.20",
@@ -28,6 +29,7 @@
     "react-i18next": "^11.18.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
+    "recharts": "^2.1.13",
     "simple-oauth2": "^4.3.0",
     "tabler-icons-react": "^1.52.0",
     "underscore": "^1.9.2"
