--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-i18next": "^11.18.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
-    "recharts": "^2.1.13",
+    // "recharts": "^2.1.13",
     "simple-oauth2": "^4.3.0",
     "tabler-icons-react": "^1.52.0",
     "underscore": "^1.9.2"
