--- a/package.json
+++ b/package.json
@@ -3,36 +3,25 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@david.kucsai/react-pdf-table": "^0.4.1",
-	"@emotion/cache": "^11.10.5",
-	"@emotion/react": "^11.10.5",
     "@mantine/core": "^5.7.0",
     "@mantine/dates": "^5.7.0",
     "@mantine/form": "^5.7.0",
     "@mantine/hooks": "^5.7.0",
     "@mantine/modals": "^5.7.0",
-    "@react-pdf/renderer": "^2.0.0",
+    "@react-pdf/renderer": "^3.0.0",
     "@tanstack/react-table": "^8.1.3",
-    "axios": "^0.19.2",
-    "body-parser": "^1.20.0",
-    "c3": "^0.7.13",
-    "d3": "^5.15.0",
+    "axios": "^1.2.6",
     "date-fns": "^2.28.0",
-    "dayjs": "^1.11.3",
     "dotenv": "^8.2.0",
-    "express": "^4.18.1",
-    "firebase": "^6.6.2",
+    "firebase": "^7.0.0",
     "i18next": "^21.8.13",
-    "nodemon": "^2.0.19",
     "react": "^16.12.0",
-    "react-c3js": "^0.1.20",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.18.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
+    "react-scripts": "^5.0.1",
     "simple-oauth2": "^4.3.0",
-    "tabler-icons-react": "^1.52.0",
-    "underscore": "^1.9.2"
+    "tabler-icons-react": "^1.52.0"
   },
   "scripts": {
     "start": "react-scripts start",
