--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "@mantine/modals": "^5.7.0",
     "@react-pdf/renderer": "^3.0.0",
     "@tanstack/react-table": "^8.1.3",
+    "@tremor/react": "^1.6.1",
     "axios": "^1.2.6",
     "date-fns": "^2.28.0",
     "dotenv": "^8.2.0",
     "firebase": "^7.0.0",
     "i18next": "^21.8.13",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^11.18.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
